==> lemonvv/FreertosTest/Src/spi.c <==
#include "spi.h"
#define SPI_FLASH_PageSize 256
#define SPI_FLASH_PerWritePageSize 256
#define W25X_WriteEnable 0x06
#define W25X_WriteDisable 0x04
#define W25X_ReadStatusReg 0x05
#define W25X_WriteStatusReg 0x01
#define W25X_ReadData 0x03
#define W25X_FastReadData 0x0B
#define W25X_FastReadDual 0x3B
#define W25X_PageProgram 0x02
#define W25X_BlockErase 0xD8
#define W25X_SectorErase 0x20
#define W25X_ChipErase 0xC7
#define W25X_PowerDown 0xB9
#define W25X_ReleasePowerDown 0xAB
#define W25X_DeviceID 0xAB
#define W25X_ManufactDeviceID 0x90
#define W25X_JedecDeviceID 0x9F
#define WIP_Flag 0x01 /* Write In Progress (WIP) flag */
#define Dummy_Byte 0xFF

void SPI_FLASH_SectorErase(uint32_t SectorAddr)
{
    /* 发送FLASH写使能命令 */
    SPI_FLASH_WriteEnable();
    SPI_FLASH_WaitForWriteEnd();
    /* 擦除扇区 */
    /* 选择串行FLASH: CS低电平 */
    FLASH_SPI_CS_ENABLE();
    /* 发送扇区擦除指令*/
    SPI_FLASH_SendByte(W25X_SectorErase);
    /*发送擦除扇区地址的高位*/
    SPI_FLASH_SendByte((SectorAddr & 0xFF0000) >> 16);
    /* 发送擦除扇区地址的中位 */
    SPI_FLASH_SendByte((SectorAddr & 0xFF00) >> 8);
    /* 发送擦除扇区地址的低位 */
    SPI_FLASH_SendByte(SectorAddr & 0xFF);
    /* 禁用串行FLASH: CS 高电平 */
    FLASH_SPI_CS_DISABLE();
    /* 等待擦除完毕*/
    SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BulkErase(void)
{
    /* 发送FLASH写使能命令 */
    SPI_FLASH_WriteEnable();

    /* 整片擦除 Erase */
    /* 选择串行FLASH: CS低电平 */
    FLASH_SPI_CS_ENABLE();
    /* 发送整片擦除指令*/
    SPI_FLASH_SendByte(W25X_ChipErase);
    /* 禁用串行FLASH: CS高电平 */
    FLASH_SPI_CS_DISABLE();

    /* 等待擦除完毕*/
    SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_PageWrite(uint8_t *pBuffer, uint32_t WriteAddr, uint16_t NumByteToWrite)
{
    /* 发送FLASH写使能命令 */
    SPI_FLASH_WriteEnable();

    /* 寻找串行FLASH: CS低电平 */
    FLASH_SPI_CS_ENABLE();
    /* 写送写指令*/
    SPI_FLASH_SendByte(W25X_PageProgram);
    /*发送写地址的高位*/
    SPI_FLASH_SendByte((WriteAddr & 0xFF0000) >> 16);
    /*发送写地址的中位*/
    SPI_FLASH_SendByte((WriteAddr & 0xFF00) >> 8);
    /*发送写地址的低位*/
    SPI_FLASH_SendByte(WriteAddr & 0xFF);

    if (NumByteToWrite > SPI_FLASH_PerWritePageSize)
    {
        NumByteToWrite = SPI_FLASH_PerWritePageSize;
        //printf("Err: SPI_FLASH_PageWrite too large!\n");
    }

    /* 写入数据*/
    while (NumByteToWrite--)
    {
        /* 发送当前要写入的字节数据 */
        SPI_FLASH_SendByte(*pBuffer);
        /* 指向下一字节数据 */
        pBuffer++;
    }

    /* 禁用串行FLASH: CS 高电平 */
    FLASH_SPI_CS_DISABLE();

    /* 等待写入完毕*/
    SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BufferRead(uint8_t *pBuffer, uint32_t ReadAddr, uint16_t NumByteToRead)
{
    /* 选择串行FLASH: CS低电平 */
    FLASH_SPI_CS_ENABLE();

    /* 发送 读 指令 */
    SPI_FLASH_SendByte(W25X_ReadData);

    /* 发送 读 地址高位 */
    SPI_FLASH_SendByte((ReadAddr & 0xFF0000) >> 16);
    /* 发送 读 地址中位 */
    SPI_FLASH_SendByte((ReadAddr & 0xFF00) >> 8);
    /* 发送 读 地址低位 */
    SPI_FLASH_SendByte(ReadAddr & 0xFF);

    while (NumByteToRead--) /* 读取数据 */
    {
        /* 读取一个字节*/
        *pBuffer = SPI_FLASH_SendByte(Dummy_Byte);
        /* 指向下一个字节缓冲区 */
        pBuffer++;
    }

    /* 禁用串行FLASH: CS 高电平 */
    FLASH_SPI_CS_DISABLE();
}

uint32_t SPI_FLASH_ReadID(void)
{
    uint32_t Temp = 0, Temp0 = 0, Temp1 = 0, Temp2 = 0;

    /* 选择串行FLASH: CS低电平 */
    FLASH_SPI_CS_ENABLE();

    /* 发送命令：读取芯片型号ID */
    SPI_FLASH_SendByte(W25X_JedecDeviceID);

    /* 从串行Flash读取一个字节数据 */
    Temp0 = SPI_FLASH_SendByte(Dummy_Byte);

    /* 从串行Flash读取一个字节数据 */
    Temp1 = SPI_FLASH_SendByte(Dummy_Byte);

    /* 从串行Flash读取一个字节数据 */
    Temp2 = SPI_FLASH_SendByte(Dummy_Byte);

    /* 禁用串行Flash：CS高电平 */
    FLASH_SPI_CS_DISABLE();

    Temp = (Temp0 << 16) | (Temp1 << 8) | Temp2;
    return Temp;
}

uint32_t SPI_FLASH_ReadDeviceID(void)
{
    uint32_t Temp = 0;

    /* 选择串行FLASH: CS低电平 */
    FLASH_SPI_CS_ENABLE();

    /* 发送命令：读取芯片设备ID * */
    SPI_FLASH_SendByte(W25X_DeviceID);
    SPI_FLASH_SendByte(Dummy_Byte);
    SPI_FLASH_SendByte(Dummy_Byte);
    SPI_FLASH_SendByte(Dummy_Byte);

    /* 从串行Flash读取一个字节数据 */
    Temp = SPI_FLASH_SendByte(Dummy_Byte);

    /* 禁用串行Flash：CS高电平 */
    FLASH_SPI_CS_DISABLE();

    return Temp;
}

uint8_t SPI_FLASH_SendByte(uint8_t byte)
{
    uint8_t d_read, d_send = byte;
    if (HAL_SPI_TransmitReceive(&hspiflash, &d_send, &d_read, 1, 0xFFFFFF) != HAL_OK)
        d_read = Dummy_Byte;

    return d_read;
}

uint16_t SPI_FLASH_SendHalfWord(uint16_t HalfWord)
{
    uint8_t d_read[2], d_send[2];
    d_send[0] = HalfWord & 0x00FF;
    d_send[1] = (HalfWord >> 8) & 0x00FF;
    if (HAL_SPI_TransmitReceive(&hspiflash, d_send, d_read, 2, 0xFFFFFF) != HAL_OK)
    {
        d_read[0] = Dummy_Byte;
        d_read[1] = Dummy_Byte;
    }

    return ((d_read[1] << 8) + d_read[0]);
}

void SPI_FLASH_WriteEnable(void)
{
    /* 选择串行FLASH: CS低电平 */
    FLASH_SPI_CS_ENABLE();

    /* 发送命令：写使能 */
    SPI_FLASH_SendByte(W25X_WriteEnable);

    /* 禁用串行Flash：CS高电平 */
    FLASH_SPI_CS_DISABLE();
}

void SPI_FLASH_WaitForWriteEnd(void)
{
    uint8_t FLASH_Status = 0;

    /* Select the FLASH: Chip Select low */
    FLASH_SPI_CS_ENABLE();

    /* Send "Read Status Register" instruction */
    SPI_FLASH_SendByte(W25X_ReadStatusReg);

    /* Loop as long as the memory is busy with a write cycle */
    do
    {
        /* Send a dummy byte to generate the clock needed by the FLASH
    and put the value of the status register in FLASH_Status variable */
        FLASH_Status = SPI_FLASH_SendByte(Dummy_Byte);
    } while ((FLASH_Status & WIP_Flag) == SET); /* Write in progress */

    /* Deselect the FLASH: Chip Select high */
    FLASH_SPI_CS_DISABLE();
}

void SPI_Flash_PowerDown(void)
{
    /* Select the FLASH: Chip Select low */
    FLASH_SPI_CS_ENABLE();

    /* Send "Power Down" instruction */
    SPI_FLASH_SendByte(W25X_PowerDown);

    /* Deselect the FLASH: Chip Select high */
    FLASH_SPI_CS_DISABLE();
}

void SPI_Flash_WAKEUP(void)
{
    /* Select the FLASH: Chip Select low */
    FLASH_SPI_CS_ENABLE();

    /* Send "Power Down" instruction */
    SPI_FLASH_SendByte(W25X_ReleasePowerDown);

    /* Deselect the FLASH: Chip Select high */
    FLASH_SPI_CS_DISABLE();
}
